WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59400
Fix OwnPtr strict mode violation in MessageQueue.h
https://bugs.webkit.org/show_bug.cgi?id=59400
Summary
Fix OwnPtr strict mode violation in MessageQueue.h
David Levin
Reported
2011-04-25 16:48:54 PDT
Fix OwnPtr strict mode violation in MessageQueue.h
Attachments
Patch
(2.64 KB, patch)
2011-04-25 16:49 PDT
,
David Levin
jamesr
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Levin
Comment 1
2011-04-25 16:49:30 PDT
Created
attachment 91018
[details]
Patch
James Robinson
Comment 2
2011-04-25 16:55:54 PDT
Comment on
attachment 91018
[details]
Patch Looks good. Might want to wait for EWS
David Levin
Comment 3
2011-04-25 22:27:07 PDT
Committed as
http://trac.webkit.org/changeset/84855
. (Thanks for resolving Adam.)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug