Fix OwnPtr strict mode violation in MessageQueue.h https://bugs.webkit.org/show_bug.cgi?id=59400

Reviewed by James Robinson.

* wtf/MessageQueue.h:
(WTF::::waitForMessage):
(WTF::::waitForMessageFilteredWithTimeout):
(WTF::::tryGetMessage):

Canonical link: https://commits.webkit.org/74582@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@84855 268f45cc-cd09-0410-ab3c-d52691b4dbfc